adding test for uploading image