@@ -11,7 +11,7 @@ import java.nio.file.Paths;
 public class AbsolutePath {
 
   public String generateFromRelativePath(String relativeFilePath) {
-    Path absoluteFilePath = Paths.get(relativeFilePath);
+    Path absoluteFilePath = Path.of(System.getProperty("user.dir") + "/" + relativeFilePath);
     return absoluteFilePath.toString();
   }
 }
